--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -103,9 +103,12 @@ input, select, textarea {
 
 	body, input, select, textarea {
 		color: #fff;
-		font-family: "Open Sans", Helvetica, sans-serif;
+		font-family: "quicksandlight", Helvetica, sans-serif;
+		src: 	url('quicksand-variablefont_wght-webfont.woff2') format('woff2'),
+         		url('quicksand-variablefont_wght-webfont.woff') format('woff');
 		font-size: 15pt;
-		font-weight: 400;
+		font-weight: normal;
+    	font-style: normal;
 		letter-spacing: 0.075em;
 		line-height: 1.65em;
 	}
@@ -3996,4 +3999,11 @@ input, select, textarea {
 
 	body.is-mobile.landing #footer {
 		background-color: #1d242a;
+	}
+
+	.whitelogo {
+		display: block;
+  		margin-left: auto;
+ 		margin-right: auto;
+ 		width: 30%;
 	}
