--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2823,7 +2823,7 @@ input, select, textarea {
 		}
 
 		.wrapper.style1 {
-			background-color: #21b2a6;
+			background-color: #ffb703;
 			color: #c8ece9;
 		}
 
@@ -3357,7 +3357,7 @@ input, select, textarea {
 		-ms-transition: -ms-transform 0.5s ease;
 		transition: transform 0.5s ease;
 		-webkit-overflow-scrolling: touch;
-		background: #21b2a6;
+		background: #ffb703;
 		color: #ffffff;
 		height: 100%;
 		max-width: 80%;
