--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2848,7 +2848,7 @@ input, select, textarea {
 			}
 
 			.wrapper.style1 header p {
-				color: #a6e0db;
+				color: #fff;
 			}
 
 			.wrapper.style1 header.major h2, .wrapper.style1 header.major h3, .wrapper.style1 header.major h4, .wrapper.style1 header.major h5, .wrapper.style1 header.major h6 {
@@ -2986,8 +2986,8 @@ input, select, textarea {
 		}
 
 		.wrapper.style3 {
-			background-color: #505393;
-			color: #d3d4e4;
+			background-color: #fb8500;
+			color: #fff;
 		}
 
 			.wrapper.style3 strong, .wrapper.style3 b {
@@ -3019,7 +3019,7 @@ input, select, textarea {
 			}
 
 			.wrapper.style3 header.major p {
-				color: #d3d4e4;
+				color: #fff;
 			}
 
 			.wrapper.style3 label {
@@ -3045,7 +3045,7 @@ input, select, textarea {
 
 			.wrapper.style3 input[type="checkbox"] + label,
 			.wrapper.style3 input[type="radio"] + label {
-				color: #d3d4e4;
+				color: rgba(255, 255, 255, 0.75) ;
 			}
 
 				.wrapper.style3 input[type="checkbox"] + label:before,
@@ -3060,23 +3060,23 @@ input, select, textarea {
 			}
 
 			.wrapper.style3 ::-webkit-input-placeholder {
-				color: #b9bad4 !important;
+				color: rgba(255, 255, 255, 0.50) !important;
 			}
 
 			.wrapper.style3 :-moz-placeholder {
-				color: #b9bad4 !important;
+				color: rgba(255, 255, 255, 0.50)  !important;
 			}
 
 			.wrapper.style3 ::-moz-placeholder {
-				color: #b9bad4 !important;
+				color: rgba(255, 255, 255, 0.50)  !important;
 			}
 
 			.wrapper.style3 :-ms-input-placeholder {
-				color: #b9bad4 !important;
+				color: rgba(255, 255, 255, 0.50)  !important;
 			}
 
 			.wrapper.style3 .formerize-placeholder {
-				color: #b9bad4 !important;
+				color: rgba(255, 255, 255, 0.50)  !important;
 			}
 
 			.wrapper.style3 .icon.major {
@@ -4019,3 +4019,16 @@ input, select, textarea {
     height: 50px;
     overflow: scroll;
 }
+
+	.profile-picture {
+		border-radius: 50%;
+	}
+
+	.whitelogo2 {
+		display: block;
+  		margin-left: 5%;
+		margin-right: auto;
+		margin-top: auto;
+		margin-bottom: auto;
+ 		width: 5%;
+	}
