updated images and background color

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2986,7 +2986,7 @@ input, select, textarea {
 		}
 
 		.wrapper.style3 {
-			background-color: #fb8500;
+			background-color: #229fbc;
 			color: rgba(255, 255, 255, 0.50);
 		}
 
@@ -3451,7 +3451,7 @@ input, select, textarea {
 		-webkit-transition: background-color 0.2s ease;
 		-ms-transition: background-color 0.2s ease;
 		transition: background-color 0.2s ease;
-		background: #2e3842;
+		background: #fb8500;
 		height: 3em;
 		left: 0;
 		line-height: 3em;
